--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
 </head>
-<script>
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-            $("#data").html("latitude: " + position.coords.latitude + "<br>longitude: " + position.coords.longitude);
-        });
-    }
-</script>
-
 
 <body>
+    <div id="city"></div>
+    <div id="clouds"></div>
+    <div id="temp"></div>
+    <div id="countryCode"></div>
+    <div id="sunrise"></div>
+    <div id="sunset"></div>
+    <div id="timezone"></div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
