--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 </head>
 
 <body>
-    <div id="city"></div>
-    <div id="clouds"></div>
-    <div id="temp"></div>
-    <div id="countryCode"></div>
-    <div id="sunrise"></div>
-    <div id="sunset"></div>
-    <div id="timezone"></div>
-
+    <div class="body">
+        <div id="city"></div>
+        <div id="clouds"></div>
+        <div id="temp"></div>
+        <div id="countryCode"></div>
+        <div id="sunrise"></div>
+        <div id="sunset"></div>
+        <div id="timezone"></div>
+        <div id="code"></div>
+        <div id="description"></div>
+        <div id="icon"></div>
+        <div id="wind_spd"></div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/index.js"></script>
 </body>
