added margin auto and set weather icon usin image src

--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 
 <body>
     <div class="body">
-        <div id="city"></div>
-        <div id="clouds"></div>
-        <div id="temp"></div>
-        <div id="countryCode"></div>
-        <div id="sunrise"></div>
-        <div id="sunset"></div>
-        <div id="timezone"></div>
-        <div id="code"></div>
-        <div id="description"></div>
-        <div id="icon"></div>
-        <div id="wind_spd"></div>
+        <div class="z-depth-2 content">
+            <div id="city"></div>
+            <div id="clouds"></div>
+            <div id="temp"></div>
+            <div id="countryCode"></div>
+            <div id="sunrise"></div>
+            <div id="sunset"></div>
+            <div id="timezone"></div>
+            <div id="code"></div>
+            <div id="description"></div>
+            <div id="icon"></div>
+            <div id="wind_spd"></div>
+        </div>
     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/index.js"></script>
 </body>
