--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
     <div class="body">
         <div class="z-depth-2 content">
             <div id="city"></div>
-            <div id="clouds"></div>
             <div id="temp"></div>
             <div id="countryCode"></div>
-            <div id="sunrise"></div>
-            <div id="sunset"></div>
             <div id="timezone"></div>
-            <div id="code"></div>
+            <!-- <div id="code"></div> -->
             <div id="description"></div>
             <div id="icon"></div>
-            <div id="wind_spd"></div>
+            <div id="wind_spd"> </div>
         </div>
     </div>
 
