--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="body">
         <div class="z-depth-2 content">
-            <div id="city"></div>
+            <div id="city" class="font-weight"></div>
             <div id="temp"></div>
             <div id="countryCode"></div>
             <div id="timezone"></div>
