set font size cityName and temperature

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="body">
         <div class="z-depth-2 content">
-            <div id="city" class="font-weight"></div>
-            <div id="temp"></div>
+            <div id="city" class="font-size"></div>
+            <div id="temp" class="temp-size"></div>
             <div id="countryCode"></div>
             <div id="timezone"></div>
             <div id="description"></div>
