--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div id="city" class="font-size"></div>
             <div id="temp" class="temp-size"></div>
             <div id="countryCode"></div>
-            <div id="timezone"></div>
+            <!-- <div id="timezone"></div> -->
             <div id="description"></div>
-            <div id="icon"></div>
+            <div id="icon" class="weather-icon"></div>
             <div id="wind_spd"> </div>
         </div>
     </div>
