set display flex

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <div class="body">
         <div class="z-depth-2 content">
             <div id="city" class="font-size"></div>
-            <div id="temp" class="temp-size"></div>
+            <div class="icon-tem">
+                <div id="temp" class="temp-size"></div>
+                <div id="icon"></div>
+
+            </div>
             <div id="countryCode"></div>
-            <!-- <div id="timezone"></div> -->
             <div id="description"></div>
-            <div id="icon" class="weather-icon"></div>
             <div id="wind_spd"> </div>
         </div>
     </div>
