--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
     <div class="body">
         <div class="z-depth-2 content">
             <div id="city" class="font-size"></div>
-            <div class="icon-tem">
-                <div id="temp" class="temp-size"></div>
-                <div id="icon"></div>
+            <div id="description"></div>
 
+            <div class="icon-temp">
+                <div id="icon"></div>
+                <div id="temp" class="temp-size"></div>
             </div>
             <div id="countryCode"></div>
-            <div id="description"></div>
-            <div id="wind_spd"> </div>
+            <div class="content-item">
+                <div id="wind_spd"> </div>
+                <div id=""></div>
+            </div>
         </div>
     </div>
 
