added sunset and sunrise

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <div id="temp" class="temp-size"></div>
             </div>
             <div id="countryCode"></div>
-            <div class="content-item">
-                <div id="wind_spd"> </div>
-                <div id=""></div>
-            </div>
+            <div id="wind_spd"></div>
+            <div id="sunrise"></div>
+            <div id="sunset"></div>
+
         </div>
     </div>
 
