add three item and use disolay flex

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <div class="z-depth-2 content">
             <div id="city" class="font-size"></div>
             <div id="description"></div>
-
             <div class="icon-temp">
                 <div id="icon"></div>
                 <div id="temp" class="temp-size"></div>
             </div>
             <div id="countryCode"></div>
-            <div id="wind_spd"></div>
-            <div id="sunrise"></div>
-            <div id="sunset"></div>
-
+            <div class="item">
+                <div id="wind_spd"></div>
+                <div id="sunrise"></div>
+                <div id="sunset"></div>
+            </div>
         </div>
     </div>
 
