set icon wind,sunrise and sunset

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
             </div>
             <div id="countryCode"></div>
             <div class="item">
+                <img src="wind-icon1.png" /></img>
                 <div id="wind_spd"></div>
+                <img src="sunrise-icon.png" /></img>
                 <div id="sunrise"></div>
+                <img src="sunset-icon.png" /></img>
                 <div id="sunset"></div>
             </div>
         </div>
