make a class wind-speed,sunrise-icon and sunset-icon and add item icon below

--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
             <div id="countryCode"></div>
             <div class="item">
                 <img src="wind-icon1.png" /></img>
-                <div id="wind_spd"></div>
+                <div class="wind-speed">
+                    <div id="wind_spd"></div>
+                </div>
                 <img src="sunrise-icon.png" /></img>
-                <div id="sunrise"></div>
+                <div class="sunrise-icon">
+                    <div id="sunrise"></div>
+                </div>
                 <img src="sunset-icon.png" /></img>
-                <div id="sunset"></div>
+                <div class="sunset-icon">
+                    <div id="sunset"></div>
+                </div>
             </div>
         </div>
     </div>
