--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <div class="body">
-        <div class="z-depth-2 content">
+        //z-depth-2
+        <div class="content">
             <div id="city" class="font-size"></div>
             <div id="description"></div>
             <div class="icon-temp">
