--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css">
+    <link rel="stylesheet" href="css/weather-icons-wind.min.css">
 
 </head>
 
 <body>
     <div class="body">
-        //z-depth-2
+        <!--z-depth-2 -->
         <div class="content">
             <div id="city" class="font-size"></div>
             <div id="description"></div>
@@ -20,18 +22,16 @@
                 <div id="icon"></div>
                 <div id="temp" class="temp-size"></div>
             </div>
-            <div id="countryCode"></div>
             <div class="item">
-                <img src="wind-icon1.png" /></img>
                 <div class="wind-speed">
+                    <i class=" wi wi-day-windy icon"></i>
                     <div id="wind_spd"></div>
                 </div>
-                <img src="sunrise-icon.png" /></img>
                 <div class="sunrise-icon">
                     <div id="sunrise"></div>
                 </div>
-                <img src="sunset-icon.png" /></img>
                 <div class="sunset-icon">
+                    <i class="wi wi-sunset icon"></i>
                     <div id="sunset"></div>
                 </div>
             </div>
