set content color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="body">
+    <div class="body-color">
         <!--z-depth-2 -->
         <div class="content">
             <div id="city" class="font-size"></div>
