set a link  for a temperature

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <div id="icon"></div>
                 <div id="temp" class="temp-size"></div>
             </div>
+            <div id="feelsLike" class="feels-like"></div>
             <div class="item">
                 <div class="wind-speed">
                     <div id="wind_spd"></div>
