--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
             </div>
             <div id="feelsLike" class="feels-like"></div>
             <div class="item">
-                <div class="wind-speed">
+                <div class="parameter">
                     <div id="wind_spd"></div>
                 </div>
-                <div class="sunrise-icon">
+                <div class="parameter">
                     <div id="sunrise"></div>
                 </div>
-                <div class="sunset-icon">
+                <div class="parameter">
                     <div id="sunset"></div>
+                </div>
+                <div class="parameter">
+                    <div id="pressure"></div>
+                </div>
+                <div class="parameter">
+                    <div id="humidity"></div>
                 </div>
             </div>
         </div>
