--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
     <title>Weather</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="icon.jpg" sizes="16x16">
+    <link rel="icon" href="favicon.jpg" sizes="16x16">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css">
     <link rel="stylesheet" href="css/weather-icons-wind.min.css">
-
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
     <div class="body-color">
-        <!--z-depth-2 -->
         <div class="content">
             <div id="city" class="font-size"></div>
             <div id="description"></div>
@@ -42,7 +40,6 @@
             </div>
         </div>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/index.js"></script>
 </body>
