--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css">
     <link rel="stylesheet" href="css/weather-icons-wind.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
     <div class="body-color">
         <div class="content">
-            <div id="city" class="font-size"></div>
+            <div id="city" class="city-name"></div>
             <div id="description"></div>
             <div class="icon-temp">
                 <div id="icon"></div>
