--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--this is waether website-->
     <div class="body-color">
         <div class="content">
             <div id="city" class="city-name"></div>
